--- a/packages/yoshi/package.json
+++ b/packages/yoshi/package.json
@@ -80,6 +80,7 @@
     "haste-task-webpack": "0.3.3",
     "haste-test-utils": "0.3.1",
     "html-loader": "0.5.5",
+    "html-webpack-plugin": "4.0.0-beta.5",
     "import-cwd": "2.1.0",
     "import-local": "2.0.0",
     "jasmine": "3.3.1",
