--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test:unit": "npx jest --config='./jest.unit.config.js'",
     "test:app-flow": "node scripts/runKitchensink.js",
     "test-babel-plugin-transform-hmr-runtime": "npm test --prefix ./packages/babel-plugin-transform-hmr-runtime",
-    "website:dev": "npm start --prefix './website'"
+    "website:dev": "npm start --prefix './website'",
+    "clean": "lerna clean"
   },
   "husky": {
     "hooks": {
