Try debugging via patch

--- a/packages/yoshi/package.json
+++ b/packages/yoshi/package.json
@@ -10,6 +10,7 @@
     "url": "https://github.com/wix/yoshi"
   },
   "scripts": {
+    "prestest": "patch ./node_modules/jest-config/build/normalize.js < normalize.patch",
     "test": "DISABLE_SENTRY=1 mocha './+(test|src)/{,!(fixtures)/**/}/*.spec.js' --retries=$([ -z \"$TEAMCITY_VERSION\" ] && echo 0 || echo 1)"
   },
   "files": [
