--- a/packages/yoshi/package.json
+++ b/packages/yoshi/package.json
@@ -10,7 +10,7 @@
     "url": "https://github.com/wix/yoshi"
   },
   "scripts": {
-    "prestest": "patch ./node_modules/jest-config/build/normalize.js < normalize.patch",
+    "pretest": "patch ./node_modules/jest-config/build/normalize.js < normalize.patch && echo Sababa",
     "test": "DISABLE_SENTRY=1 mocha './+(test|src)/{,!(fixtures)/**/}/*.spec.js' --retries=$([ -z \"$TEAMCITY_VERSION\" ] && echo 0 || echo 1)"
   },
   "files": [
